[package]
name = "p4runtime"
version = "0.1.0+1.4.0.rc.5"
edition = "2021"
authors = ["duskmoon (Campbell He) <kp.campbell.he@duskmoon314.com>"]
description = "P4Runtime gRPC protocol definitions"
categories = ["network-programming"]
keywords = ["p4runtime", "grpc"]
license = "Apache-2.0"
repository = "https://github.com/duskmoon314/p4runtime-rs"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["examples/basic", "p4runtime-client", "xtask"]

[dependencies]
prost = "0.12.4"
prost-types = "0.12.4"
serde = { version = "1.0.198", features = ["derive"], optional = true }
tonic = "0.11.0"
