[package]
name = "p4runtime-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
p4runtime = { path = "../" }
prost = "0.12.4"
thiserror = "1.0.59"
tokio = "1.37.0"
tokio-stream = "0.1.15"
tonic = "0.11.0"
