[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
form = "0.11.1"
prost-build = "0.12.4"
reqwest = "0.12.4"
tonic-build = "0.11.0"
