[package]
name = "basic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
p4runtime = { path = "../../" }
p4runtime-client = { path = "../../p4runtime-client" }
tokio = { version = "1.37.0", features = ["full"] }
